<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/Linea_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/imgLogin"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:contentDescription="@string/img_login"
            app:srcCompat="@drawable/ride1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="71dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="60dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="Un Ride"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@android:color/holo_blue_bright"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Linea_Pedir"
        android:layout_width="115dp"
        android:layout_height="44dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="135dp"
        tools:layout_editor_absoluteY="158dp">

        <TextView
            android:id="@+id/PedirRide"
            android:layout_width="114dp"
            android:layout_height="60dp"
            android:text="Pedir Ride!"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Linea_btnRide"
        android:layout_width="114dp"
        android:layout_height="48dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="135dp"
        tools:layout_editor_absoluteY="221dp">

        <Button
            android:id="@+id/btnPedir"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnPedir" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Linea_Dar"
        android:layout_width="115dp"
        android:layout_height="44dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="135dp"
        tools:layout_editor_absoluteY="309dp">

        <TextView
            android:id="@+id/DarRide"
            android:layout_width="114dp"
            android:layout_height="60dp"
            android:text="Dar Ride!"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Linea_btnRide"
        android:layout_width="114dp"
        android:layout_height="48dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="135dp"
        tools:layout_editor_absoluteY="385dp">

        <Button
            android:id="@+id/btnDar"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnDar" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>